--- a/视频推荐/index.css
+++ b/视频推荐/index.css
@@ -62,7 +62,7 @@
     left: 10px;
 
 }
-.video-list > .active {
+.video-list .items >a.active {
     color: #ff5c38;
     font-size: 12px;
     transition: all .2s;
@@ -75,6 +75,14 @@
     font-size: 22px;
     font-weight: 700;
 } */
+.video-list .items > a{
+    display: block;
+    margin-left: 35px;
+    color: rgba(255,255,255,.7);
+    height: 35px;
+    line-height: 35px;
+    width: 300px;
+}
 .active > span {
     font-size: 22px;
     font-weight: 700;
@@ -102,9 +110,17 @@
 }
 
 .video-imgs > .img {
-    display: block;
+    display:none;
     width: 100%;
     height: 100%;
     background-position: center 0;
     background-repeat: no-repeat;
 }
+.video-imgs > .img-active {
+    display:block;
+    width: 100%;
+    height: 100%;
+    background-position: center 0;
+    background-repeat: no-repeat;
+}
+
